--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="hello/main.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <div>
+      <h1>Hello World</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore,
+        laboriosam soluta? Molestiae in beatae quis, optio, blanditiis ullam,
+        aliquam aperiam porro nostrum earum architecto. Odio quo ducimus
+        accusantium distinctio eos?
+      </p>
+    </div>
   </body>
 </html>
